apps/build.gradle.kts:  avoid using weird JVM options